html for top container

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <script src="script.js"></script>
 </head>
 <body>
+    <section>
+        <div class="top-container">
+                <h1>Metric/Imperial Unit Conversion</h1>
+                <h2 class="number"></h2>
+                <button id="convert-btn">Convert</button>
+        </div>
+    </section>
     
 </body>
 </html>
