--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
                 <h2 class="number"></h2>
                 <button id="convert-btn">Convert</button>
         </div>
+        <div class="bottom-container">
+            <div class="mesurement">
+                <h3>Length (Meter/Feet)</h3>
+                <p id="length"></p>
+            </div>
+            <div class="mesurement">
+                <h3>Volume (Liters/Gallons)</h3>
+                <p id="volume"></p>
+            </div>
+            <div class="mesurement">
+                <h3>Mass (Kilograms/Pounds)</h3>
+                <p id="mass"></p>
+            </div>
+
+        </div>
     </section>
     
 </body>
