--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
                 <button id="convert-btn">Convert</button>
         </div>
         <div class="bottom-container">
-            <div class="mesurement">
+            <div class="measurement">
                 <h3>Length (Meter/Feet)</h3>
                 <p id="length"></p>
             </div>
-            <div class="mesurement">
+            <div class="measurement">
                 <h3>Volume (Liters/Gallons)</h3>
                 <p id="volume"></p>
             </div>
-            <div class="mesurement">
+            <div class="measurement">
                 <h3>Mass (Kilograms/Pounds)</h3>
                 <p id="mass"></p>
             </div>
