changed h2 to input instead

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section>
         <div class="top-container">
                 <h1>Metric/Imperial Unit Conversion</h1>
-                <h2 class="number">0</h2> <!--This should probably be an input-->
+                <input type="number"><!--This should probably be an input-->
                 <button id="convert-btn">Convert</button>
         </div>
         <div class="bottom-container">
