defer added to script tag
removed some comments as well

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <section>
         <div class="top-container">
                 <h1>Metric/Imperial Unit Conversion</h1>
-                <input type="number"><!--This should probably be an input-->
+                <input type="number">
                 <button id="convert-btn">Convert</button>
         </div>
         <div class="bottom-container">
