--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section>
         <div class="top-container">
                 <h1>Metric/Imperial Unit Conversion</h1>
-                <input type="number">
+                <input type="number" id="input-con">
                 <button id="convert-btn">Convert</button>
         </div>
         <div class="bottom-container">
